@@ -1,3 +1,7 @@
+2005-02-22  Roger While <simrw@sim-basis.de>
+
+	* run, run.src/misc.at : Fix REF/CONTENT/VALUE test
+
 2005-02-12  Roger While <simrw@sim-basis.de>
 
 	* run.src/misc.at : .. BY CONTENT LENGTH OF ..
